// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel matches snapshot desktop 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-17"
  >
    <div
      class="makeStyles-carouselWrapper-26"
    >
      <div
        class="makeStyles-carouselContainer-28"
        style="transition: transform .25s ease; transform: translateX(calc(-100%));"
      >
        <div
          class="makeStyles-carouselSlot-27"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 0;"
        />
        <div
          class="makeStyles-carouselSlot-27"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-27"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-27"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 3;"
        />
        <div
          class="makeStyles-carouselSlot-27"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 4;"
        />
      </div>
    </div>
    <div
      class="makeStyles-buttonsContainer-18"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-19"
        data-testid="leftButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-30 makeStyles-iconLeft-20"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-19"
        data-testid="rightButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-31 makeStyles-iconRight-21"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="makeStyles-progressDotsContainer-22 makeStyles-progressDotsContainer-29"
    >
      <div
        class="makeStyles-progressDots-23"
      >
        <ul
          class="makeStyles-root-32 makeStyles-progressDotsRootOverride-24"
        >
          <li
            class="makeStyles-dot-33 makeStyles-progressDotsDotOverride-25 makeStyles-activeDot-34"
          />
          <li
            class="makeStyles-dot-33 makeStyles-progressDotsDotOverride-25"
          />
          <li
            class="makeStyles-dot-33 makeStyles-progressDotsDotOverride-25"
          />
          <li
            class="makeStyles-dot-33 makeStyles-progressDotsDotOverride-25"
          />
          <li
            class="makeStyles-dot-33 makeStyles-progressDotsDotOverride-25"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel matches snapshot mobile 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="makeStyles-carouselWrapper-10"
    >
      <div
        class="makeStyles-carouselContainer-12"
        style="transition: transform .25s ease; transform: translateX(calc(-100%));"
      >
        <div
          class="makeStyles-carouselSlot-11"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 0;"
        />
        <div
          class="makeStyles-carouselSlot-11"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-11"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-11"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 3;"
        />
        <div
          class="makeStyles-carouselSlot-11"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 4;"
        />
      </div>
    </div>
    <div
      class="makeStyles-progressDotsContainer-6 makeStyles-progressDotsContainer-13"
    >
      <div
        class="makeStyles-progressDots-7"
      >
        <ul
          class="makeStyles-root-14 makeStyles-progressDotsRootOverride-8"
        >
          <li
            class="makeStyles-dot-15 makeStyles-progressDotsDotOverride-9 makeStyles-activeDot-16"
          />
          <li
            class="makeStyles-dot-15 makeStyles-progressDotsDotOverride-9"
          />
          <li
            class="makeStyles-dot-15 makeStyles-progressDotsDotOverride-9"
          />
          <li
            class="makeStyles-dot-15 makeStyles-progressDotsDotOverride-9"
          />
          <li
            class="makeStyles-dot-15 makeStyles-progressDotsDotOverride-9"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel should match snapshot on left button click 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-57"
  >
    <div
      class="makeStyles-carouselWrapper-66"
    >
      <div
        class="makeStyles-carouselContainer-68"
        style="transition: none; transform: translateX(calc(2 * (-100%)));"
      >
        <div
          class="makeStyles-carouselSlot-67"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-67"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-67"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 3;"
        />
        <div
          class="makeStyles-carouselSlot-67"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 4;"
        />
        <div
          class="makeStyles-carouselSlot-67"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 0;"
        />
      </div>
    </div>
    <div
      class="makeStyles-buttonsContainer-58"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-59"
        data-testid="leftButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-75 makeStyles-iconLeft-60"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-59"
        data-testid="rightButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-76 makeStyles-iconRight-61"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="makeStyles-progressDotsContainer-62 makeStyles-progressDotsContainer-69"
    >
      <div
        class="makeStyles-progressDots-63"
      >
        <ul
          class="makeStyles-root-72 makeStyles-progressDotsRootOverride-64"
        >
          <li
            class="makeStyles-dot-73 makeStyles-progressDotsDotOverride-65"
          />
          <li
            class="makeStyles-dot-73 makeStyles-progressDotsDotOverride-65"
          />
          <li
            class="makeStyles-dot-73 makeStyles-progressDotsDotOverride-65"
          />
          <li
            class="makeStyles-dot-73 makeStyles-progressDotsDotOverride-65"
          />
          <li
            class="makeStyles-dot-73 makeStyles-progressDotsDotOverride-65 makeStyles-activeDot-74"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel should match snapshot on left swipe 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-95"
  >
    <div
      class="makeStyles-carouselWrapper-104"
    >
      <div
        class="makeStyles-carouselContainer-106"
        style="transition: none; transform: translateX(0%);"
      >
        <div
          class="makeStyles-carouselSlot-105"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 4;"
        />
        <div
          class="makeStyles-carouselSlot-105"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 0;"
        />
        <div
          class="makeStyles-carouselSlot-105"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-105"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-105"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 3;"
        />
      </div>
    </div>
    <div
      class="makeStyles-progressDotsContainer-100 makeStyles-progressDotsContainer-107"
    >
      <div
        class="makeStyles-progressDots-101"
      >
        <ul
          class="makeStyles-root-108 makeStyles-progressDotsRootOverride-102"
        >
          <li
            class="makeStyles-dot-109 makeStyles-progressDotsDotOverride-103"
          />
          <li
            class="makeStyles-dot-109 makeStyles-progressDotsDotOverride-103 makeStyles-activeDot-110"
          />
          <li
            class="makeStyles-dot-109 makeStyles-progressDotsDotOverride-103"
          />
          <li
            class="makeStyles-dot-109 makeStyles-progressDotsDotOverride-103"
          />
          <li
            class="makeStyles-dot-109 makeStyles-progressDotsDotOverride-103"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel should match snapshot on right button click 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-35"
  >
    <div
      class="makeStyles-carouselWrapper-44"
    >
      <div
        class="makeStyles-carouselContainer-46"
        style="transition: none; transform: translateX(0%);"
      >
        <div
          class="makeStyles-carouselSlot-45"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 4;"
        />
        <div
          class="makeStyles-carouselSlot-45"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 0;"
        />
        <div
          class="makeStyles-carouselSlot-45"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-45"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-45"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 3;"
        />
      </div>
    </div>
    <div
      class="makeStyles-buttonsContainer-36"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-37"
        data-testid="leftButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-53 makeStyles-iconLeft-38"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-37"
        data-testid="rightButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-root-54 makeStyles-iconRight-39"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
              fill="#223f5f"
            />
            <path
              d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
              fill="#223f5f"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
            style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
            />
          </span>
        </span>
      </button>
    </div>
    <div
      class="makeStyles-progressDotsContainer-40 makeStyles-progressDotsContainer-47"
    >
      <div
        class="makeStyles-progressDots-41"
      >
        <ul
          class="makeStyles-root-50 makeStyles-progressDotsRootOverride-42"
        >
          <li
            class="makeStyles-dot-51 makeStyles-progressDotsDotOverride-43"
          />
          <li
            class="makeStyles-dot-51 makeStyles-progressDotsDotOverride-43 makeStyles-activeDot-52"
          />
          <li
            class="makeStyles-dot-51 makeStyles-progressDotsDotOverride-43"
          />
          <li
            class="makeStyles-dot-51 makeStyles-progressDotsDotOverride-43"
          />
          <li
            class="makeStyles-dot-51 makeStyles-progressDotsDotOverride-43"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Carousel should match snapshot on right swipe 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-79"
  >
    <div
      class="makeStyles-carouselWrapper-88"
    >
      <div
        class="makeStyles-carouselContainer-90"
        style="transition: none; transform: translateX(calc(2 * (-100%)));"
      >
        <div
          class="makeStyles-carouselSlot-89"
          data-testid="0"
          style="background-image: url(app/enrollment/community-list/1.jpg); background-size: cover; order: 1;"
        />
        <div
          class="makeStyles-carouselSlot-89"
          data-testid="1"
          style="background-image: url(app/enrollment/community-list/2.jpg); background-size: cover; order: 2;"
        />
        <div
          class="makeStyles-carouselSlot-89"
          data-testid="2"
          style="background-image: url(app/enrollment/community-list/3.jpg); background-size: cover; order: 3;"
        />
        <div
          class="makeStyles-carouselSlot-89"
          data-testid="3"
          style="background-image: url(app/enrollment/community-list/4.jpg); background-size: cover; order: 4;"
        />
        <div
          class="makeStyles-carouselSlot-89"
          data-testid="4"
          style="background-image: url(app/enrollment/community-list/5.jpg); background-size: cover; order: 0;"
        />
      </div>
    </div>
    <div
      class="makeStyles-progressDotsContainer-84 makeStyles-progressDotsContainer-91"
    >
      <div
        class="makeStyles-progressDots-85"
      >
        <ul
          class="makeStyles-root-92 makeStyles-progressDotsRootOverride-86"
        >
          <li
            class="makeStyles-dot-93 makeStyles-progressDotsDotOverride-87"
          />
          <li
            class="makeStyles-dot-93 makeStyles-progressDotsDotOverride-87"
          />
          <li
            class="makeStyles-dot-93 makeStyles-progressDotsDotOverride-87"
          />
          <li
            class="makeStyles-dot-93 makeStyles-progressDotsDotOverride-87"
          />
          <li
            class="makeStyles-dot-93 makeStyles-progressDotsDotOverride-87 makeStyles-activeDot-94"
          />
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
